objects/DLN_Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trainee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <referenceTo>DLN_Training__c</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>Enrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Enrollment</label>
    <language>es</language>
    <nameField>
        <displayFormat>ENR_{000000}</displayFormat>
        <label>Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>